--- a/photo/index.pug
+++ b/photo/index.pug
@@ -8,7 +8,9 @@ block content
       a(href="/" alt="Emily") E
         img(src="../assets/img/dancing/crop/4.png")
     h3#photo Photo
-    .media-container.photo-container
+    .media-container.photo-container        
+      .prev &lt;
+      .next &gt;
       .carousel
         img(src="../assets/img/dancing/carousel/1.jpg"  data-caption="1"  height="200px")
         img(src="../assets/img/dancing/carousel/2.png"  data-caption="2"  height="200px")
