--- a/video/index.pug
+++ b/video/index.pug
@@ -11,6 +11,8 @@ block content
         img(src="../assets/img/dancing/crop/5.png")
     h3#photo Video
     .media-container.video-container
+      .prev &lt;
+      .next &gt;
       .carousel
         .card
           iframe(src="https://player.vimeo.com/video/151188661?title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen, mozallowfullscreen, allowfullscreen)
