--- a/choreography/index.pug
+++ b/choreography/index.pug
@@ -7,6 +7,8 @@ block content
     a(href="/" alt="Emily") E
       img.flip(src="../assets/img/dancing/crop/2.png")
   .choreo
+    .rightImage
+      img(src="../assets/img/dancing/carousel/7.png")
     .choreo-container
       h3 Choreography
       .choreo-box
