--- a/sass/_reset.sass
+++ b/sass/_reset.sass
@@ -9,7 +9,7 @@ body
 
 p
   color: white
-  
+
 a, a:visited, a:hover, a:focus
   text-decoration: none
   color: currentColor
@@ -49,3 +49,7 @@ h4
   transform: scaleX(-1)
   filter: FlipH
   -ms-filter: "FlipH"
+
+@media screen and (max-width: 540px)
+  h3
+    font-size: 32px
