--- a/sass/index.sass
+++ b/sass/index.sass
@@ -25,6 +25,7 @@
   font-style: $font-caption
   font-weight: lighter
   position: fixed
+  z-index: 1000
   top: 10px
   left: 25px
   padding: 0px 5px 3px
@@ -45,7 +46,7 @@
   position: fixed
   width: 100%
   // height: auto
-  top: 50%
+  top: 40%
   left: 50%
   transform: translate3d(0px, -50%, 0px)
   margin-left: -50%
@@ -78,11 +79,10 @@
       position: relative
       display: block
       padding: 5px 10px
-      @for $i from 1 through 4
-        &:nth-child(#{$i})
-          .menu-button:hover
-            cursor: pointer
-            color: nth($colorList, 1)
+      .menu-button:hover
+        cursor: pointer
+        color: $link-color
+
     .sub-menu
       position: absolute
       padding: 0 20px
