--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -141,6 +141,9 @@ h4 {
 @media screen and (max-width: 540px) {
   h3 {
     font-size: 32px; } }
+@media screen and (max-width: 400px) {
+  h3 {
+    font-size: 28px; } }
 .media .home-button {
   left: 5px; }
 .media h3 {
@@ -338,6 +341,11 @@ h4 {
       color: #4d6bd9;
       font-weight: 700; }
 
+@media screen and (max-width: 500px) {
+  .body-container.bio {
+    left: 60%; }
+    .body-container.bio .bio-container p {
+      text-align: left; } }
 @-webkit-keyframes fadeIn {
   0% {
     opacity: 0; }
@@ -507,11 +515,14 @@ h4 {
         -webkit-animation-delay: 1400ms;
         animation-delay: 1400ms; }
 
-@media screen and (max-width: 640px) {
+@media screen and (max-width: 700px) {
   .choreo .choreo-container .choreo-box:nth-of-type(n) {
     flex-direction: column; }
   .choreo .choreo-container .choreo-box .visual, .choreo .choreo-container .choreo-box .copy {
     width: 100%; } }
+@media screen and (max-width: 620px) {
+  .choreo-container {
+    left: 65%; } }
 .load-images {
   visibility: hidden;
   height: 0;
@@ -527,7 +538,7 @@ h4 {
   font-style: "Lato", sans-serif;
   font-weight: lighter;
   position: fixed;
-  z-index: 1000;
+  z-index: 800;
   top: 10px;
   left: 25px;
   padding: 0px 5px 3px;
@@ -606,10 +617,12 @@ h4 {
   display: none;
   height: 280px;
   width: 550px;
+  max-width: 90%;
   padding: 10px 10px;
   left: 50%;
   top: 50%;
-  margin: -140px 0px 0px -275px;
+  margin-top: -140px;
+  transform: translateX(-50%);
   font-family: monospace;
   background-color: white;
   transform-origin: bottom left; }
@@ -682,7 +695,7 @@ h4 {
     animation: fadeIn 500ms forwards 3s; }
 
 .nav-opener {
-  z-index: 3;
+  z-index: 901;
   cursor: pointer;
   position: fixed;
   padding: 2px;
@@ -693,7 +706,7 @@ h4 {
     color: black; }
 
 .mobile-nav {
-  z-index: 2;
+  z-index: 900;
   position: fixed;
   height: 100%;
   width: 25%;
@@ -710,15 +723,28 @@ h4 {
       margin-bottom: 40px;
       cursor: pointer; }
 
-@media screen and (min-width: 992px) {
-  .mobile-nav, .nav-items, .nav-opener {
-    display: none; } }
 @media screen and (max-width: 992px) {
   .home-button {
     top: 50px;
     left: 5px; } }
+@media screen and (max-width: 500px) {
+  .home-button {
+    top: 65px;
+    left: 5px; } }
 @media screen and (max-width: 700px) {
   .mobile-nav {
-    width: 50%; } }
+    width: 60%; } }
+@media screen and (min-width: 500px) {
+  .mobile-nav, .nav-items, .nav-opener {
+    display: none; } }
+@media screen and (max-width: 400px) {
+  .menu-item {
+    display: none;
+    visibility: hidden; }
+
+  .dancing-image {
+    top: 35%;
+    left: 40%;
+    margin-left: -60%; } }
 
 /*# sourceMappingURL=index.css.map */
