--- a/sass/_reset.sass
+++ b/sass/_reset.sass
@@ -53,3 +53,6 @@ h4
 @media screen and (max-width: 540px)
   h3
     font-size: 32px
+@media screen and (max-width: 400px)
+  h3
+    font-size: 28px
