--- a/choreography/index.pug
+++ b/choreography/index.pug
@@ -7,36 +7,57 @@ block content
     a(href="/" alt="Emily") E
       img.flip(src="../assets/img/dancing/crop/2.png")
   .choreo
-    .rightImage
-      img(src="../assets/img/dancing/carousel/7.png")
     .choreo-container
       h3 Choreography
       .choreo-box
         .copy
-          h4 untitled_37.txt (2016)
+          h4 untitled_37.txt 
+          h6 (2016)
           p.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
-            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
-            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
-            dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+            Choreographed and performed by Emily Hansel<br>
+            Computer program by Michael Fix
+          p.
+            <i>untitled_37.txt</i> was the culmination of over a year’s worth of 
+            research on the subjectivity of language. Words are not equivalent 
+            to ideas, they simply represent ideas. Words attempt to 
+            accurately portray the abstract in a concrete manner. The research 
+            developed into an exploration of the human need to make the abstract tangible.
+          p.
+            <i>untitled_37.txt</i> premiered on April 27, 2016 at the 
+            University of South Florida. This piece was the fruit of Emily’s 
+            <a href="/assets/thesis.pdf" target="_blank" alt="Honors Thesis">Honors Thesis</a> 
+            for the Honors College at USF.
+ 
         img.visual(src="../assets/img/choreo/untitled37.png" alt="Untitled_37.txt")        
       .choreo-box
         .copy
-          h4 No Reason (2015)
-          p A work in progress, set to premiere in December, 2015. A piece in which there is a reason for everything.
+          h4 No Reason 
+          h6 (2015)
+          p.
+            Choreographed by Emily Hansel for five dancers<br>
+            Music by Ratatat
+          p.
+            A piece in which there is a reason for everything. An environment in which five movers exist and discover.
+          p.
+            <i>No Reason</i> premiered at the University of South Florida’s 
+            Theatre One in December 2015.  It was later selected to be presented 
+            at the Southeast ACDA Conference in March 2016. 
+
         img.visual(src="../assets/img/choreo/noreason.png" alt="No Reason")
       .choreo-box
         .copy 
-          h4 Vertical Words (2015)
+          h4 Vertical Words 
+          h6 (2015)
           p Choreographed and performed by Emily Hansel at Micadanses in Paris.
           p.
             <i>Vertical Words</i> is an attempt to prove that the perception of meaning is 
             inevitable, regardless of whether or not the artist intended any meaning. The 
             choreographic process was inspired by the "word sculptures" of minimalist sculptor, Carl Andre.
-        iframe.visual(width="480" height="277" src="https://www.youtube.com/embed/xsECKU9nBCY" frameborder="0" allowfullscreen)
+        iframe.visual(width="480" height="277" src="https://www.youtube.com/embed/xsECKU9nBCY?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen)
       .choreo-box
         .copy
-          h4 Not Empty (2015)
+          h4 Not Empty 
+          h6 (2015)
           p Choreographed, performed, and directed by Emily Hansel.
           p.
             This film is a response to a performance of Angelin Preljocaj's "Empty Moves" 
@@ -53,10 +74,11 @@ block content
             audiences through romanticism, narrative, or encoded meanings. They often referred 
             to their work as "meaningless" or "purposeless." But this attempt to signify nothing 
             signifies something. The attempt to remove purpose is a purpose itself.
-        iframe.visual(width="480" height="277" src="https://www.youtube.com/embed/L8l2vXdaTiY" frameborder="0" allowfullscreen)
+        iframe.visual(width="480" height="277" src="https://www.youtube.com/embed/L8l2vXdaTiY?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen)
       .choreo-box
         .copy
-          h4 Insatiable (2015)
+          h4 Insatiable 
+          h6 (2015)
           p.
             Choreographed and performed by Emily Hansel and Jessica Zizzo.<br>Music by ltlp, additional audio from Patrick McCarty.
           p.
@@ -69,14 +91,15 @@ block content
             as well as other performances at USF. This successful partnership between these two 
             choreogrpahers has led to further collaboration. Right now, the two are in the process 
             of creating an e-book which cohesively incorporates dance and poetry (with poetry by Patrick McCarty).
-        iframe.visual(width="480" height="277" src="https://www.youtube.com/embed/KgTw8PLSSlw" frameborder="0" allowfullscreen)
+        iframe.visual(width="480" height="277" src="https://www.youtube.com/embed/KgTw8PLSSlw?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen)
       .choreo-box
         .copy
-          h4 Scream (2014)
+          h4 Scream 
+          h6 (2014)
           p.
-            <b>Choreographed</b> by Emily Hansel.<br/>
-            <b>Performed</b> by Hannah Luckow, Alyssa Marchand, Robert Kelley, Hannah Mainellis, Monica Moneses, Cloe Leppard, and Dayne Davis.<br>
-            <b>Music</b> by Philip Glass and Yo-Yo Ma.<br/>
+            Choreographed by Emily Hansel.<br>
+            Performed by Hannah Luckow, Alyssa Marchand, Robert Kelley, Hannah Mainellis, Monica Moneses, Cloe Leppard, and Dayne Davis.<br>
+            Music by Philip Glass and Yo-Yo Ma.<br>
           p Inspired by Edvard Munch's "The Scream."
         img.visual(src="../assets/img/choreo/scream.png" alt="Scream")
 block scripts
