--- a/photo/index.pug
+++ b/photo/index.pug
@@ -12,21 +12,15 @@ block content
       .prev &lt;
       .next &gt;
       .carousel
-        img(src="../assets/img/dancing/carousel/1.jpg"  data-caption="1"  height="200px")
-        img(src="../assets/img/dancing/carousel/2.png"  data-caption="2"  height="200px")
-        img(src="../assets/img/dancing/carousel/3.jpg"  data-caption="3"  height="200px")
-        img(src="../assets/img/dancing/carousel/4.jpg"  data-caption="4"  height="200px")
-        img(src="../assets/img/dancing/carousel/5.jpg"  data-caption="5"  height="200px")
-        img(src="../assets/img/dancing/carousel/6.png"  data-caption="6"  height="200px")
-        img(src="../assets/img/dancing/carousel/7.png"  data-caption="7"  height="200px")
-        img(src="../assets/img/dancing/carousel/8.png"  data-caption="8"  height="200px")
-        img(src="../assets/img/dancing/carousel/9.png"  data-caption="9"  height="200px")
-        img(src="../assets/img/dancing/carousel/10.png" data-caption="10" height="200px")
-        img(src="../assets/img/dancing/carousel/11.png" data-caption="11" height="200px")
-        img(src="../assets/img/dancing/carousel/12.png" data-caption="12" height="200px")
-        img(src="../assets/img/dancing/carousel/13.png" data-caption="13" height="200px")
-        img(src="../assets/img/dancing/carousel/14.png" data-caption="14" height="200px")
-        img(src="../assets/img/dancing/carousel/15.png" data-caption="15" height="200px")
+        img(src="../assets/img/dancing/carousel/1.jpg"  data-caption="2016<br>Photograph by Jason Lam"  height="200px")
+        img(src="../assets/img/dancing/carousel/2.jpg"  data-caption="<i>Threshold</i><br>2015<br>Choreography by Andrew Carroll<br>Photogrpah by Kyle Scharf"  height="200px")
+        img(src="../assets/img/dancing/carousel/3.jpg"  data-caption="<i>Unkindness of Ravens</i><br>2014<br>Choreography by Carl Flink<br>Photograph by Tiffany Schrepferman"  height="200px")
+        img(src="../assets/img/dancing/carousel/4.jpg"  data-caption="<i>Cause</i><br>2016<br>Choreography by Robert Moses<br>Photograph by Kyle Scharf"  height="200px")
+        img(src="../assets/img/dancing/carousel/5.jpg"  data-caption="<i>Fingerprints</i><br>2016<br>Choreography by Paula Nunez<br>Photograph by Kyle Scharf"  height="200px")
+        img(src="../assets/img/dancing/carousel/6.jpg"  data-caption="<i>If this continues…</i><br>2015<br>Choreography by Alyssa Marchand<br>Photograph by Candace Kaw"  height="200px")
+        img(src="../assets/img/dancing/carousel/7.jpg"  data-caption="<i>KOTO</i><br>2015<br>Choreography by Alonzo King<br>Photrograph by Kyle Scharf"  height="200px")
+        img(src="../assets/img/dancing/carousel/8.jpg"  data-caption="<i>Picture in a Frame</i><br>2013<br>Choreography by Bliss Kohlmyer<br>Photograph by Candace Kaw"  height="200px")
+        img(src="../assets/img/dancing/carousel/9.jpg"  data-caption="<i>3:00am</i><br>2014/2016<br>Choreography by Andrew Carroll<br>Photograph by Candace Kaw/Soho Images"  height="200px")
       .caption
 block scripts
   script(src="../assets/js/jquery.js")
