--- a/pug/_main_template.pug
+++ b/pug/_main_template.pug
@@ -34,10 +34,16 @@ html
         p Fill out the form below to contact me
         input(tabindex="1",  type="text", name="name", placeholder="Name")
         input(tabindex="2",  type="email", name="_replyto", placeholder="Email")
-        input(type="hidden", name="_next", value="#submitted")
         textarea(tabindex="3",  name="message" placeholder="Type your message here")
-        input(tabindex="4",  type="submit" value="Send")
+        input.email-send(tabindex="4",  type="submit" value="Send")
     block content
+    //- script.
+    //-   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    //-   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    //-   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    //-   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    //-   ga('create', 'UA-83432320-1', 'auto');
+    //-   ga('send', 'pageview');
     script(src="/assets/js/jquery.js")
     script(src="/assets/js/index.js")
     block scripts
