--- a/sass/_choreography.sass
+++ b/sass/_choreography.sass
@@ -2,45 +2,56 @@
 .choreo
   top: 0px
   width: 100%
-  .rightImage
-    position: fixed
-    z-index: -1
-    width: 40%
-    height: 40%
-    bottom: 200px
-    right: 15%
-    right: 15vw
 
   .choreo-container
     border: 10px solid white
     padding: 20px
     position: absolute
     margin-top: 50px
+    margin-bottom: 50px
     font-family: $font-lato
-    width: 60%
+    width: 70%
     left: 50%
-    margin-left: -30%
+    margin-left: -35%
     h3
       text-align: left
 
     h4
-      text-transform: uppercase
+      text-transform: none
+      font-weight: bold
       letter-spacing: 0px
+      text-align: center
       &:after
         content: ''
+    h6
+      margin: 0
+      color: white
+      font-size: 18px
+      font-weight: lighter
+      text-align: center
+
     p
-      text-align: justify
+      text-align: left
       font-weight: 300
+
+    a
+      color: $accent
+      &:hover
+        text-decoration: underline
 
     .choreo-box
       display: flex
       justify-content: center
       align-items: center
       margin-top: 30px
+      // margin-bottom: 50px
       padding-bottom: 40px
       padding-top: 30px
       border-bottom: 4px solid white
       opacity: 0
+
+      .visual
+        border: 4px solid white
 
       .visual, .copy
         width: 45%
