--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -44,10 +44,8 @@
     position: relative
     z-index: -1
 
-    img
-      border: 4px solid white
-
     img, .card
+      border: 4px solid white
       position: absolute
       display: none
       top: 50%
@@ -55,9 +53,10 @@
       transform: translate3d(-50%, -50%, 0px) scale(1.5)
       transform-origin: top center
   .caption
+    text-align: center
     display: inline-block
     color: white
-    font-size: 40px
+    font-size: 25px
     font-family: $font-lato
     font-weight: 100
     margin-top: 50px
