add zoom functionality to pictures. Needs refactoring

--- a/photo/index.pug
+++ b/photo/index.pug
@@ -1,4 +1,4 @@
-extends ../pug/_main_template.pug
+/_main_template.pug
 block title
   title Emily Hansel | Media
   link(rel="stylesheet", href="../assets/css/index.css")
@@ -12,15 +12,15 @@ block content
       .prev &lt;
       .next &gt;
       .carousel
-        img(src="../assets/img/dancing/carousel/1.jpg"  data-caption="2016<br>Photograph by Jason Lam"  height="200px")
-        img(src="../assets/img/dancing/carousel/2.jpg"  data-caption="<i>Threshold</i><br>2015<br>Choreography by Andrew Carroll<br>Photogrpah by Kyle Scharf"  height="200px")
-        img(src="../assets/img/dancing/carousel/3.jpg"  data-caption="<i>Unkindness of Ravens</i><br>2014<br>Choreography by Carl Flink<br>Photograph by Tiffany Schrepferman"  height="200px")
-        img(src="../assets/img/dancing/carousel/4.jpg"  data-caption="<i>Cause</i><br>2016<br>Choreography by Robert Moses<br>Photograph by Kyle Scharf"  height="200px")
-        img(src="../assets/img/dancing/carousel/5.jpg"  data-caption="<i>Fingerprints</i><br>2016<br>Choreography by Paula Nunez<br>Photograph by Kyle Scharf"  height="200px")
-        img(src="../assets/img/dancing/carousel/6.jpg"  data-caption="<i>If this continues…</i><br>2015<br>Choreography by Alyssa Marchand<br>Photograph by Candace Kaw"  height="200px")
-        img(src="../assets/img/dancing/carousel/7.jpg"  data-caption="<i>KOTO</i><br>2015<br>Choreography by Alonzo King<br>Photrograph by Kyle Scharf"  height="200px")
-        img(src="../assets/img/dancing/carousel/8.jpg"  data-caption="<i>Picture in a Frame</i><br>2013<br>Choreography by Bliss Kohlmyer<br>Photograph by Candace Kaw"  height="200px")
-        img(src="../assets/img/dancing/carousel/9.jpg"  data-caption="<i>3:00am</i><br>2014/2016<br>Choreography by Andrew Carroll<br>Photograph by Candace Kaw/Soho Images"  height="200px")
+        img(src="../assets/img/dancing/carousel/1.jpg"  data-caption="2016<br>Photograph by Jason Lam" )
+        img(src="../assets/img/dancing/carousel/2.jpg"  data-caption="<i>Threshold</i><br>2015<br>Choreography by Andrew Carroll<br>Photogrpah by Kyle Scharf" )
+        img(src="../assets/img/dancing/carousel/3.jpg"  data-caption="<i>Unkindness of Ravens</i><br>2014<br>Choreography by Carl Flink<br>Photograph by Tiffany Schrepferman" )
+        img(src="../assets/img/dancing/carousel/4.jpg"  data-caption="<i>Cause</i><br>2016<br>Choreography by Robert Moses<br>Photograph by Kyle Scharf" )
+        img(src="../assets/img/dancing/carousel/5.jpg"  data-caption="<i>Fingerprints</i><br>2016<br>Choreography by Paula Nunez<br>Photograph by Kyle Scharf" )
+        img(src="../assets/img/dancing/carousel/6.jpg"  data-caption="<i>If this continues…</i><br>2015<br>Choreography by Alyssa Marchand<br>Photograph by Candace Kaw" )
+        img(src="../assets/img/dancing/carousel/7.jpg"  data-caption="<i>KOTO</i><br>2015<br>Choreography by Alonzo King<br>Photrograph by Kyle Scharf" )
+        img(src="../assets/img/dancing/carousel/8.jpg"  data-caption="<i>Picture in a Frame</i><br>2013<br>Choreography by Bliss Kohlmyer<br>Photograph by Candace Kaw" )
+        img(src="../assets/img/dancing/carousel/9.jpg"  data-caption="<i>3:00am</i><br>2014/2016<br>Choreography by Andrew Carroll<br>Photograph by Candace Kaw/Soho Images" )
       .caption
 block scripts
   script(src="../assets/js/jquery.js")
