--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -169,9 +169,13 @@ h4 {
     color: white;
     cursor: pointer; }
   .media .media-container .prev {
+    position: fixed;
+    z-index: 999;
     float: left;
     left: 5%; }
   .media .media-container .next {
+    position: fixed;
+    z-index: 999;
     float: right;
     right: 5%; }
   .media .media-container.video-container .carousel {
@@ -181,7 +185,14 @@ h4 {
   width: 100%;
   height: 50vh;
   position: relative;
-  z-index: -1; }
+  z-index: 1; }
+  .media .carousel img {
+    height: 200px;
+    -webkit-transition: height 300ms ease-in-out;
+    transition: height 300ms ease-in-out; }
+    .media .carousel img.jumbo {
+      height: 350px;
+      transform: scale(1); }
   .media .carousel img, .media .carousel .card {
     border: 4px solid white;
     position: absolute;
@@ -190,6 +201,9 @@ h4 {
     left: 50%;
     transform: translate3d(-50%, -50%, 0px) scale(1.5);
     transform-origin: top center; }
+    .media .carousel img.active, .media .carousel .card.active {
+      cursor: -webkit-zoom-in;
+      cursor: zoom-in; }
 .media .caption {
   text-align: center;
   display: inline-block;
@@ -623,6 +637,7 @@ h4 {
         padding: 0 15px; }
         .body-container .menu .sub-menu li .site-link {
           display: block;
+          -webkit-transition: transform 500ms ease-out;
           transition: transform 500ms ease-out;
           transform: translate3d(-200%, 0px, 0px); }
           .body-container .menu .sub-menu li .site-link:hover {
@@ -663,6 +678,7 @@ h4 {
     box-sizing: border-box;
     display: inline-block;
     border: 2px solid #112233;
+    -webkit-transition: all 200ms ease-out;
     transition: all 200ms ease-out;
     color: #112233; }
     .contact-form input:focus, .contact-form textarea:focus {
@@ -729,6 +745,7 @@ h4 {
   width: 25%;
   background-color: white;
   transform: translateX(-100%);
+  -webkit-transition: transform 300ms ease-out;
   transition: transform 300ms ease-out; }
   .mobile-nav.active {
     transform: translateX(0px); }
