--- a/sass/index.sass
+++ b/sass/index.sass
@@ -99,6 +99,7 @@
         padding: 0 15px
         .site-link
           display: block
+          -webkit-transition: transform 500ms ease-out
           transition: transform 500ms ease-out
           transform: translate3d(-200%, 0px, 0px)
           &:hover
@@ -139,6 +140,7 @@
     box-sizing: border-box
     display: inline-block
     border: 2px solid $form-color
+    -webkit-transition: all 200ms ease-out
     transition: all 200ms ease-out
     color: $form-color
 
@@ -211,6 +213,7 @@
   width: 25%
   background-color: white
   transform: translateX(-100%)
+  -webkit-transition: transform 300ms ease-out
   transition: transform 300ms ease-out
   &.active
     transform: translateX(0px)
