Prepare to go live

--- a/index.pug
+++ b/index.pug
@@ -34,7 +34,9 @@ block content
         span.menu-button.contact contact 
       .dancing-image
   //- img.leftImage(src='assets/img/dancing/5.png')
-  
+  //- p.credits.
+    Website by <a href="//mfix22.github.io" target="_blank" alt="Michael Fix Freelance">Michael Fix</a> | 
+    Cover photos by <a href="http://www.jlam.com/" target="_blank" alt="Jason Lam Photography">Jason Lam</a>
   .load-images
     img(src='assets/img/dancing/1.png')
     img(src='assets/img/dancing/2.png')
