--- a/sass/index.sass
+++ b/sass/index.sass
@@ -18,7 +18,20 @@
     position: fixed
     height: 0
     width: 0
+.credits
+  position: fixed
+  display: inline-block
+  bottom: 0
+  width: 100%
 
+  color: white
+  font-size: 8px
+  font-family: monospace
+  text-transform: uppercase
+  text-align: center
+  opacity: 0
+  +fade(600ms)
+  +delay(3.6s)
 .home-button
   color: white
   font-size: 70px
