--- a/sass/index.sass
+++ b/sass/index.sass
@@ -19,7 +19,7 @@
     height: 0
     width: 0
 .credits
-  position: fixed
+  position: absolute
   display: inline-block
   bottom: 0
   width: 100%
