fix formspree bug

--- a/photo/index.pug
+++ b/photo/index.pug
@@ -1,4 +1,4 @@
-/_main_template.pug
+extends ../pug/_main_template.pug
 block title
   title Emily Hansel | Media
   link(rel="stylesheet", href="../assets/css/index.css")
