--- a/pug/_main_template.pug
+++ b/pug/_main_template.pug
@@ -41,6 +41,7 @@ html
         input(tabindex="2"  type="email" name="_replyto" placeholder="Email")
         textarea(tabindex="3"  name="message" placeholder="Type your message here")
         input.email-send(tabindex="4"  type="submit" value="Send")
+        //- input(type="hidden" name="_next" value="//emilyhansel.me/sent")
     block content
     script.
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
