add meta description tag

--- a/pug/_main_template.pug
+++ b/pug/_main_template.pug
@@ -2,6 +2,7 @@ doctype html
 html
   head
     meta(charset="utf-8")
+    meta(name="description" content="Emily Hansel - Dancer, Choreographer - San Francisco, CA. Notable works include untitled_37.txt, No Reason, Vertical Words, Not Empty, Insatiable, and Scream ">
     meta(http-equiv="X-UA-Compatible", content="IE=edge,chrome=1")
     meta(name="viewport", content="width=device-width, initial-scale=1")
     link(rel="shortcut icon", href="/assets/img/favicon2.ico")
@@ -30,11 +31,6 @@ html
           span.contact contact
     .contact-form
       span x
-      //- <form action="http://formspree.io/your@email.com" method="POST">
-      //-     <input type="text" name="name">
-      //-     <input type="email" name="_replyto">
-      //-     <input type="submit" value="Send">
-      //- </form>
       form(method="POST", action="http://formspree.io/emilylhansel@gmail.com")
         p Fill out the form below to contact me
         input(tabindex="1"  type="text" name="name" placeholder="Name")
