--- a/sass/_choreography.sass
+++ b/sass/_choreography.sass
@@ -13,8 +13,13 @@
     width: 70%
     left: 50%
     margin-left: -35%
-    h3
+    h1
       text-align: left
+      font-size: 40px
+      font-weight: 100
+      text-transform: uppercase
+      color: white
+      margin: 0 auto
 
     h4
       text-transform: none
