--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -2,7 +2,13 @@
 .media
   .home-button
     left: 5px
-  h3
+  h1
+    text-align: left
+    font-size: 40px
+    font-weight: 100
+    text-transform: uppercase
+    color: white
+    margin: 0 auto
     padding: 40px 0px 20px
     text-align: center
   .media-container
