--- a/choreography/index.pug
+++ b/choreography/index.pug
@@ -102,5 +102,7 @@ block content
             Music by Philip Glass and Yo-Yo Ma.<br>
           p Inspired by Edvard Munch's "The Scream."
         img.visual(src="../assets/img/choreo/scream.png" alt="Scream")
+    include ../pug/_footer.pug
+    
 block scripts
   script sessionStorage.seen = true;
