--- a/sass/_choreography.sass
+++ b/sass/_choreography.sass
@@ -6,13 +6,10 @@
   .choreo-container
     border: 10px solid white
     padding: 20px
-    position: absolute
-    margin-top: 50px
-    margin-bottom: 50px
+    margin: 50px auto
     font-family: $font-lato
     width: 70%
     left: 50%
-    margin-left: -35%
     h1
       text-align: left
       font-size: 40px
