--- a/statement/index.pug
+++ b/statement/index.pug
@@ -37,5 +37,6 @@ block content
         communicate ideas about my choreography via spoken or written language. Dance is capable of 
         expressing different things than words can, and I <i>do</i> not attempt to impose the confines of 
         language upon dance. Thus, I usually let my work speak for itself.
+    include ../pug/_footer.pug
 block scripts
   script sessionStorage.seen = true;
